# Local-Projects

./: .gitignore  first.txt  main.py  pull_request.txt  pyproject.toml
Practice/Dependency/: main.py
Practice/Exception_handler/: custom_exceptions.py  exception_handlers.py  main.py
Practice/FileWork/: main.py
Practice/Lifespan/: main.py  new.txt
Practice/Middleware_Background/: main.py  middleware.py
Practice/Movies/: db.py  functions.py  main.py  model.py  models.py  schemas.py
Practice/Movies/custom_exceptions/: custom_exc.py
Practice/Movies/dependencies/: token_dep.py
Practice/Movies/handlers/: custom_handlers.py
Practice/Movies/middlewares/: general_middleware.py
Practice/Movies/routers/: movies_router.py  ultra_services.py
Practice/Movies/ultra_services/: create_new_table.py
Practice/Routers/: items_router.py  main.py  routered_router.py  users_router.py
Practice/Security/: asdasd.py  main.py
Practice/Streaming_Response/: main.py  yield practice.py
Practice/Testing/: conftest.py  main.py  test_main.py
Practice/Uvicorn_Guvicorn/: main.py
Practice/WebSocket/: main.py  main2.py  main3.py
Practice/pydantic/: main.py
