[tool.poetry]
name = "localprojects"
version = "0.1.0"
description = ""
authors = ["bajugo <texetbuy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
cowsay = "^6.1"
sqlalchemy = "^2.0.44"
fastapi = "^0.122.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
