[tool.poetry]
name = "localprojects"
version = "0.1.0"
description = ""
authors = ["bajugo <texetbuy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.44"
fastapi = "^0.122.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
psycopg2-binary = "^2.9.11"
ipython = "^9.7.0"
pytest = "^9.0.1"
pydantic-settings = "^2.12.0"
pydantic = {extras = ["email"], version = "^2.12.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
